// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> should render when [props.loading=false] 1`] = `
<Container__WideContainer>
  <ViewHeader
    title="Administration"
  >
    <ViewHeader__ViewHeaderTitle>
      Administration
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <Tabs__TabLink
      to="/administration/settings"
    >
      Settings
    </Tabs__TabLink>
    <Tabs__TabLink
      to="/administration/users"
    >
      Users
    </Tabs__TabLink>
    <Tabs__TabLink
      to="/administration/updates"
    >
      Updates
    </Tabs__TabLink>
  </Tabs>
  <Switch>
    <Redirect
      exact={true}
      from="/administration"
      to="/administration/settings"
    />
    <Route
      component={[Function]}
      path="/administration/settings"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(ManageUsers)",
          "type": [Function],
        }
      }
      exact={true}
      path="/administration/users"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(SoftwareUpdateViewer)",
          "type": [Function],
        }
      }
      path="/administration/updates"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(UserDetail)",
          "type": [Function],
        }
      }
      path="/administration/users/:userId"
    />
  </Switch>
</Container__WideContainer>
`;

exports[`<Settings /> should render when [props.loading=true] 1`] = `
<Container__WideContainer>
  <ViewHeader
    title="Administration"
  >
    <ViewHeader__ViewHeaderTitle>
      Administration
    </ViewHeader__ViewHeaderTitle>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <Tabs__TabLink
      to="/administration/settings"
    >
      Settings
    </Tabs__TabLink>
    <Tabs__TabLink
      to="/administration/users"
    >
      Users
    </Tabs__TabLink>
    <Tabs__TabLink
      to="/administration/updates"
    >
      Updates
    </Tabs__TabLink>
  </Tabs>
  <LoadingPlaceholder />
</Container__WideContainer>
`;
